# tambat

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hosts.rs  lib.rs  main.rs  panel.rs  secrets.rs  ssh.rs
src-tauri/tests/: mock_sshd.py
src/components/: FileAskDialog.tsx  FileContextMenu.tsx  FileIcon.tsx  FilePanel.tsx  HostForm.tsx  Logo.tsx  SecretPrompt.tsx  Sidebar.tsx  StatChips.tsx  TermView.tsx
