[package]
name = "tambat"
version = "0.1.0"
description = "Tambat - SSH client ringan"
authors = ["you"]
edition = "2021"

[lib]
name = "tambat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["sync-secret-service"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
